--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
-  "scripts": {
-    "start": "nodemon server.js"
+   "scripts": {
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
